# mini-synth

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
sine-wave/: CMakeLists.txt  main.cpp
